sumo/tests/sumo/output/e2/errors/length_false/errors.sumo
Error: Attribute 'length' in definition of e2Detector '4/1to3/1' is not a real number.
Quitting (on error).
